; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/sort/extr_bwstring.c_bwscmp.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/sort/extr_bwstring.c_bwscmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bwstring = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bwscmp(%struct.bwstring* %0, %struct.bwstring* %1, i64 %2) #0 {
  %4 = alloca %struct.bwstring*, align 8
  %5 = alloca %struct.bwstring*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store %struct.bwstring* %0, %struct.bwstring** %4, align 8
  store %struct.bwstring* %1, %struct.bwstring** %5, align 8
  store i64 %2, i64* %6, align 8
  %11 = load %struct.bwstring*, %struct.bwstring** %4, align 8
  %12 = getelementptr inbounds %struct.bwstring, %struct.bwstring* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  store i64 %13, i64* %7, align 8
  %14 = load %struct.bwstring*, %struct.bwstring** %5, align 8
  %15 = getelementptr inbounds %struct.bwstring, %struct.bwstring* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  store i64 %16, i64* %8, align 8
  %17 = load i64, i64* %6, align 8
  %18 = load i64, i64* %7, align 8
  %19 = sub i64 %18, %17
  store i64 %19, i64* %7, align 8
  %20 = load i64, i64* %6, align 8
  %21 = load i64, i64* %8, align 8
  %22 = sub i64 %21, %20
  store i64 %22, i64* %8, align 8
  %23 = load i64, i64* %7, align 8
  store i64 %23, i64* %9, align 8
  %24 = load i64, i64* %8, align 8
  %25 = load i64, i64* %9, align 8
  %26 = icmp ult i64 %24, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %3
  %28 = load i64, i64* %8, align 8
  store i64 %28, i64* %9, align 8
  br label %29

29:                                               ; preds = %27, %3
  %30 = load %struct.bwstring*, %struct.bwstring** %4, align 8
  %31 = load %struct.bwstring*, %struct.bwstring** %5, align 8
  %32 = load i64, i64* %6, align 8
  %33 = load i64, i64* %9, align 8
  %34 = call i32 @bwsncmp(%struct.bwstring* %30, %struct.bwstring* %31, i64 %32, i64 %33)
  store i32 %34, i32* %10, align 4
  %35 = load i32, i32* %10, align 4
  %36 = icmp eq i32 %35, 0
  br i1 %36, label %37, label %49

37:                                               ; preds = %29
  %38 = load i64, i64* %7, align 8
  %39 = load i64, i64* %8, align 8
  %40 = icmp ult i64 %38, %39
  br i1 %40, label %41, label %42

41:                                               ; preds = %37
  store i32 -1, i32* %10, align 4
  br label %48

42:                                               ; preds = %37
  %43 = load i64, i64* %8, align 8
  %44 = load i64, i64* %7, align 8
  %45 = icmp ult i64 %43, %44
  br i1 %45, label %46, label %47

46:                                               ; preds = %42
  store i32 1, i32* %10, align 4
  br label %47

47:                                               ; preds = %46, %42
  br label %48

48:                                               ; preds = %47, %41
  br label %49

49:                                               ; preds = %48, %29
  %50 = load i32, i32* %10, align 4
  ret i32 %50
}

declare dso_local i32 @bwsncmp(%struct.bwstring*, %struct.bwstring*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
